# memory-assistant

./: .gitignore  README.md  pyproject.toml
src/: config.py
src/db/: mongo_connection.py
src/llm/: llm.py
src/models/: base.py  book.py  chat_session.py  section.py  user.py
src/repositories/: base_repo.py  book_repo.py  chat_session_repo.py  section_repo.py  user_repo.py
src/services/: book_service.py  chat_service.py  s3_storage.py  section_service.py
src/ui/: app.py
src/ui/pages/: document_detail.py  document_liabrary.py
src/ui/ui_pages/: chat.py  document_detail.py  document_liabrary.py
